--- a/src/gestorcitas/views/DoctorsTab.fxml
+++ b/src/gestorcitas/views/DoctorsTab.fxml
@@ -2,7 +2,9 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -88,6 +90,14 @@
          <BorderPane.margin>
             <Insets bottom="15.0" left="15.0" />
          </BorderPane.margin>
+         <contextMenu>
+            <ContextMenu>
+              <items>
+                <MenuItem mnemonicParsing="false" onAction="#onShow" text="%generic.show" />
+                  <MenuItem mnemonicParsing="false" onAction="#onRemove" text="%generic.remove" />
+              </items>
+            </ContextMenu>
+         </contextMenu>
       </TableView>
    </center>
 </BorderPane>
