--- a/src/gestorcitas/views/MainWindow.fxml
+++ b/src/gestorcitas/views/MainWindow.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="550.0" prefWidth="750.0" stylesheets="@../resources/css/custom.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.MainWindowController">
+<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="550.0" prefWidth="750.0" stylesheets="@../resources/css/custom.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.MainWindowController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -24,11 +24,12 @@
                   <MenuItem onAction="#onDiscardChanges" style="-fx-graphic: url(&quot;/gestorcitas/resources/icon/discard.png&quot;);" text="%menu.clinic.discard" />
                   <Menu style="-fx-graphic: url(&quot;/gestorcitas/resources/icon/lang.png&quot;);" text="%menu.clinic.lang">
                      <items>
-                        <RadioMenuItem selected="true" text="%menu.clinic.lang.es">
+                        <RadioMenuItem fx:id="langES" selected="true" text="%menu.clinic.lang.es">
                            <toggleGroup>
                               <ToggleGroup fx:id="language" />
                            </toggleGroup>
                         </RadioMenuItem>
+                        <RadioMenuItem fx:id="langEN" text="%menu.clinic.lang.en" toggleGroup="$language" />
                      </items>
                   </Menu>
                   <MenuItem onAction="#onQuit" style="-fx-graphic: url(&quot;/gestorcitas/resources/icon/exit.png&quot;);" text="%menu.clinic.quit">
@@ -65,7 +66,7 @@
    <center>
       <TabPane tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
         <tabs>
-          <Tab closable="false" style="-fx-graphic: url(&quot;/gestorcitas/resources/icon/appointment.png&quot;);" text="%tab.appointments">
+          <Tab closable="false" text="%tab.appointments">
                <content>
                   <fx:include fx:id="appointmentsTab" source="AppointmentsTab.fxml" />
                </content>
