--- a/src/gestorcitas/views/PatientsTab.fxml
+++ b/src/gestorcitas/views/PatientsTab.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.PatientsTabController">
+<BorderPane styleClass="background-form" stylesheets="@../resources/css/sceneTheme.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.PatientsTabController">
    <top>
       <HBox alignment="CENTER_RIGHT" prefHeight="48.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
@@ -29,12 +29,12 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </HBox>
-            <TextField fx:id="searchBox" onAction="#onSearch" prefHeight="35.0" prefWidth="190.0" promptText="%tab.patients.search.prompt">
+            <TextField fx:id="searchBox" onAction="#onSearch" prefHeight="35.0" prefWidth="190.0" promptText="%tab.patients.search.prompt" styleClass="text-id-sub">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
             </TextField>
-            <Button mnemonicParsing="false" onAction="#onSearch" prefHeight="35.0" text="%generic.search">
+            <Button mnemonicParsing="false" onAction="#onSearch" prefHeight="35.0" styleClass="neutralButton" text="%generic.search">
                <HBox.margin>
                   <Insets right="24.0" />
                </HBox.margin>
@@ -45,17 +45,17 @@
    <right>
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0">
          <children>
-            <Button fx:id="showBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onShow" prefHeight="35.0" text="%generic.show">
+            <Button fx:id="showBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onShow" prefHeight="35.0" styleClass="neutralButton" text="%generic.show">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </Button>
-            <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAdd" prefHeight="35.0" text="%generic.add">
+            <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onAdd" prefHeight="35.0" styleClass="nextButton" text="%generic.add">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </Button>
-            <Button fx:id="removeBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemove" prefHeight="35.0" text="%generic.remove">
+            <Button fx:id="removeBtn" disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onRemove" prefHeight="35.0" styleClass="cancelButton" text="%generic.remove">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
@@ -70,7 +70,7 @@
       </VBox>
    </right>
    <center>
-      <TableView fx:id="table" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
+      <TableView fx:id="table" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="text-id-table" tableMenuButtonVisible="true" BorderPane.alignment="CENTER">
          <columns>
             <TableColumn fx:id="photoColumn" editable="false" maxWidth="70.0" minWidth="-Infinity" prefWidth="70.0" resizable="false" sortable="false" text="%table.person.photo" />
             <TableColumn fx:id="idColumn" editable="false" minWidth="-1.0" prefWidth="100.0" text="%table.person.id" />
