--- a/src/gestorcitas/views/MainWindow.fxml
+++ b/src/gestorcitas/views/MainWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -10,9 +11,9 @@
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="550.0" prefWidth="750.0" stylesheets="@../resources/css/custom.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.MainWindowController">
+<BorderPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="550.0" prefWidth="750.0" styleClass="background-form" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.MainWindowController">
    <top>
-      <MenuBar BorderPane.alignment="CENTER">
+      <MenuBar styleClass="text-id-sub" BorderPane.alignment="CENTER">
         <menus>
           <Menu text="%menu.clinic">
             <items>
@@ -64,7 +65,7 @@
       </MenuBar>
    </top>
    <center>
-      <TabPane tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+      <TabPane styleClass="text-id-sub" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
         <tabs>
           <Tab closable="false" text="%tab.appointments">
                <content>
@@ -84,4 +85,8 @@
         </tabs>
       </TabPane>
    </center>
+   <stylesheets>
+      <URL value="@../resources/css/custom.css" />
+      <URL value="@../resources/css/sceneTheme.css" />
+   </stylesheets>
 </BorderPane>
