--- a/src/gestorcitas/views/PatientForm.fxml
+++ b/src/gestorcitas/views/PatientForm.fxml
@@ -18,9 +18,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="346.0" prefWidth="555.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.PatientFormController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="346.0" prefWidth="555.0" styleClass="background-form" stylesheets="@../resources/css/sceneTheme.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gestorcitas.controllers.PatientFormController">
    <children>
-      <Text fill="#726868" layoutX="17.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="%form.person.title">
+      <Text fill="#726868" layoutX="17.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-id-up" text="%form.person.title">
          <font>
             <Font size="16.0" />
          </font>
@@ -39,29 +39,29 @@
             <RowConstraints minHeight="15.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="%table.person.name" GridPane.rowIndex="1">
+            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-id-sub" text="%table.person.name" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Text>
-            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="%table.person.surname" GridPane.rowIndex="2">
+            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-id-sub" text="%table.person.surname" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Text>
-            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="%table.person.id" GridPane.rowIndex="3">
+            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-id-sub" text="%table.person.id" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Text>
-            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" text="%table.person.phone" GridPane.rowIndex="4">
+            <Text fill="#575757" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-id-sub" text="%table.person.phone" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Text>
             <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <TextField fx:id="nameField" alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="160.0">
+                  <TextField fx:id="nameField" alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="160.0" styleClass="text-id-sub">
                      <VBox.margin>
                         <Insets top="18.0" />
                      </VBox.margin>
@@ -71,7 +71,7 @@
             </VBox>
             <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <TextField fx:id="surnameField" alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="260.0">
+                  <TextField fx:id="surnameField" alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="260.0" styleClass="text-id-sub">
                      <VBox.margin>
                         <Insets top="18.0" />
                      </VBox.margin>
@@ -81,7 +81,7 @@
             </VBox>
             <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <children>
-                  <TextField fx:id="idField" alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="110.0">
+                  <TextField fx:id="idField" alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="110.0" styleClass="text-id-sub">
                      <VBox.margin>
                         <Insets top="18.0" />
                      </VBox.margin>
@@ -91,7 +91,7 @@
             </VBox>
             <VBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
-                  <TextField fx:id="phoneField" alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="110.0">
+                  <TextField fx:id="phoneField" alignment="BASELINE_LEFT" maxWidth="-Infinity" prefWidth="110.0" styleClass="text-id-sub">
                      <VBox.margin>
                         <Insets top="18.0" />
                      </VBox.margin>
@@ -101,7 +101,7 @@
             </VBox>
          </children>
       </GridPane>
-      <CheckBox fx:id="photoConsentBox" layoutX="29.0" layoutY="281.0" mnemonicParsing="false" text="%form.person.photoConsent" />
+      <CheckBox fx:id="photoConsentBox" layoutX="29.0" layoutY="281.0" mnemonicParsing="false" styleClass="text-id-sub" text="%form.person.photoConsent" />
       <VBox alignment="TOP_RIGHT" layoutX="368.0" layoutY="14.0" prefWidth="167.0">
          <children>
             <ImageView fx:id="photoPreview" fitHeight="150.0" fitWidth="144.0" pickOnBounds="true">
@@ -112,7 +112,7 @@
                   <Rectangle2D minX="150.0" minY="150.0" width="150.0" />
                </viewport>
             </ImageView>
-            <Button fx:id="photoChangeBtn" alignment="CENTER" mnemonicParsing="false" onAction="#onChangePhoto" prefHeight="25.0" text="%generic.change">
+            <Button fx:id="photoChangeBtn" alignment="CENTER" mnemonicParsing="false" onAction="#onChangePhoto" prefHeight="25.0" styleClass="neutralButton" text="%generic.change">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
@@ -122,12 +122,12 @@
       </VBox>
       <HBox alignment="CENTER_RIGHT" layoutX="266.0" layoutY="298.0" prefHeight="47.0" prefWidth="284.0" spacing="6.0">
          <children>
-            <Button fx:id="saveBtn" mnemonicParsing="false" onAction="#onSave" text="%generic.save">
+            <Button fx:id="saveBtn" mnemonicParsing="false" onAction="#onSave" styleClass="nextButton" text="%generic.save">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
             </Button>
-            <Button fx:id="cancelBtn" mnemonicParsing="false" onAction="#onCancel" text="%generic.cancel">
+            <Button fx:id="cancelBtn" mnemonicParsing="false" onAction="#onCancel" styleClass="cancelButton" text="%generic.cancel">
                <HBox.margin>
                   <Insets />
                </HBox.margin>
