[WIP] Validate appointment form and make it functional

--- a/src/gestorcitas/views/AppointmentForm.fxml
+++ b/src/gestorcitas/views/AppointmentForm.fxml
@@ -102,8 +102,6 @@
                   <RowConstraints minHeight="15.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="15.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="15.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="15.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="15.0" valignment="TOP" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-id-sub" text="Visit day" GridPane.rowIndex="3">
@@ -114,20 +112,13 @@
                   <DatePicker fx:id="visitDayPicker" prefHeight="25.0" prefWidth="164.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-id-sub" text="Visit time" GridPane.rowIndex="4" />
                   <Label fx:id="visitTimeLabel" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-id-sub" text="Room" GridPane.rowIndex="5">
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </Text>
-                  <ChoiceBox fx:id="roomSelector" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                  <Label fx:id="roomDescriptionLabel" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-id-sub" text="Patient" GridPane.rowIndex="2" />
                   <ChoiceBox fx:id="patientSelector" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-id-sub" text="Doctor" GridPane.rowIndex="1" />
                   <ChoiceBox fx:id="doctorSelector" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
-            <Label fx:id="errorLabel" layoutX="5.0" layoutY="340.0" textFill="RED" />
+            <Label fx:id="errorLabel" layoutX="5.0" layoutY="340.0" prefHeight="55.0" prefWidth="229.0" textFill="RED" wrapText="true" />
             <HBox alignment="CENTER_RIGHT" layoutX="2.0" layoutY="403.0" maxWidth="1.7976931348623157E308" prefHeight="47.0" prefWidth="238.0" spacing="6.0">
                <children>
                   <Button fx:id="saveBtn" mnemonicParsing="false" onAction="#onSave" styleClass="nextButton" stylesheets="@../resources/css/sceneTheme.css" text="%generic.save">
